ros/servo controller/ros2_ws/log/build_2024-06-03_09-58-45/arm_controller_package/stderr.log
  File "/home/ubuntu/ros2_ws/install/arm_controller_package/lib/python3.10/site-packages/arm_controller_package/PiClient.py", line 68
    if move_gripper = True
       ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

